tests/paczka1/fuzzy1/70822524.err
Error in line 1: NK2NYdz0 A309 78,5
Error in line 3: NK2NYdz0 S644 34,8
Error in line 2: S644 S658 53,5
Error in line 8: JxWp S658 17,5
